--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ JWT_EXPIRE=7d
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
