--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "add-payment": "node scripts/add-payment-table.js",
     "add-qr-payment": "node scripts/add-qr-payment.js",
     "test-qr-payment": "node scripts/test-qr-payment.js",
+    "optimize-db": "node scripts/optimize-db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,6 +29,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
